--- a/Grial/Eleos3/Views/Forms/TabbedLoginPage.xaml
+++ b/Grial/Eleos3/Views/Forms/TabbedLoginPage.xaml
@@ -61,7 +61,6 @@
 					VerticalOptions="End"
 					HorizontalOptions="Start" />
                     
-                
             </Grid>
 
             <Grid
@@ -73,12 +72,15 @@
 					Style="{ StaticResource SimpleTabStyle }"
 					TabStripPlacement="Top"
 					TabStripBackgroundColor="{ DynamicResource BasePageColor}"
-					TabContentBackgroundColor="{ DynamicResource MainWrapperBackgroundColor }">
+					TabContentBackgroundColor="{ DynamicResource MainWrapperBackgroundColor }"
 
+					SelectedTabChanging="OnTabChangingEvent">
+					
                     <!-- LOGIN TAB -->
                     <grial:TabItem
 						IconText="{ x:Static local:GrialIconsFont.Camera }"
-						Text="Login">
+						Text="Login"
+						>
                         <ScrollView>
                             <Grid
 								Padding="20"
@@ -90,15 +92,11 @@
 										Height="Auto" />
                                 </Grid.RowDefinitions>
 
-                                
-									
-                                    
                                <StackLayout
 									Grid.Row="0"
 									VerticalOptions="Center"
 									Spacing="20">
                                    
-
                                     <!-- Email -->
                                     <StackLayout
 										Orientation="Horizontal"
@@ -141,8 +139,6 @@
                                         
                                     </StackLayout>
 
-
-
 									<StackLayout
 										Spacing="0">
                                         <Label
@@ -154,7 +150,6 @@
 										/>
                                         
                                     </StackLayout>
-
 
                                 </StackLayout>
 
@@ -178,9 +173,6 @@
 										Style="{ StaticResource Horizontal1ptLineStyle }" />
 
                                 </StackLayout>
-
-
-                               
 
                             </Grid>
                         </ScrollView>
