--- a/Grial/Eleos3/Views/Forms/TabbedLoginPage.xaml
+++ b/Grial/Eleos3/Views/Forms/TabbedLoginPage.xaml
@@ -286,43 +286,46 @@
 						Text="Logout">
                         <ScrollView>
                             <Grid
-								Padding="20,0,20,0"
+								Padding="20"
 								Style="{ StaticResource ResponsiveLandscapeMarginStyle }"
 								RowSpacing="10"
-								VerticalOptions="Center">
+								VerticalOptions="End">
                                 
 								<Grid.RowDefinitions>
                                     <RowDefinition
 										Height="*" />
-                                    <RowDefinition
-										Height="*" />
+                                    
                                 </Grid.RowDefinitions>
-                                
-                                <StackLayout
-									Grid.Row="0"
-									Spacing="0"
-									VerticalOptions="Center"
-									Margin="0,0,0,0">
-                                    <Button 
-										HeightRequest="44"
-										VerticalOptions="Center"
-										Text="Logout"
-										Style="{ StaticResource PrimaryActionButtonStyle }"
-										Clicked="OnLogoutBtnClicked"/>
-                                </StackLayout>
 
 								<StackLayout
-										Grid.Row="1"
-										Spacing="0">
-                                        <Label
+									Grid.Row="0"
+									Spacing="14"
+									VerticalOptions="End"
+									Margin="0,0,0,0">
+
+									 <Label
 											x:Name="LogoutMessageLabel"
 											Text=""
 											FontSize="18"
 											HorizontalOptions="Center"
 											HorizontalTextAlignment="Center"
 										/>
-                                        
-                                    </StackLayout>
+
+                                    <!-- Primary Button -->
+                                    <Button
+										Clicked="OnLogoutBtnClicked"
+										HeightRequest="44"
+										VerticalOptions="Center"
+										Text="Logout"
+										Style="{ StaticResource PrimaryActionButtonStyle }" />
+
+									 <!-- Line -->
+                                    <BoxView
+										VerticalOptions="Center"
+										HorizontalOptions="Fill"
+										Style="{ StaticResource Horizontal1ptLineStyle }" />
+
+                                </StackLayout>
 
                             </Grid>
                         </ScrollView>
