--- a/Grial/Eleos3/Views/Forms/TabbedAddTaskPage.xaml
+++ b/Grial/Eleos3/Views/Forms/TabbedAddTaskPage.xaml
@@ -76,7 +76,8 @@
 					TabStripBackgroundColor="{ DynamicResource BasePageColor}"
 					TabContentBackgroundColor="{ DynamicResource MainWrapperBackgroundColor }"
 					SelectedTabChanging="OnTabChangingEvent">
-					
+
+					<!-- ADD TASK -->
 					<grial:TabItem
 						IconText="{ x:Static local:GrialIconsFont.Camera }"
 						Text="Add Task">   
@@ -175,6 +176,135 @@
                         </ScrollView>
                         
                     </grial:TabItem>
+
+
+
+
+					<!-- UPDATE TASK-->
+					<grial:TabItem
+						IconText="{ x:Static local:GrialIconsFont.Camera }"
+						Text="Update Task">   
+                        <ScrollView>
+                            <Grid
+								Padding="20"
+								Style="{ StaticResource ResponsiveLandscapeMarginStyle }">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition
+										Height="*" />
+                                    <RowDefinition
+										Height="Auto" />
+                                </Grid.RowDefinitions>
+
+                                <StackLayout
+									Grid.Row="0"
+									VerticalOptions="Center"
+									Spacing="20">
+
+									<!-- Id -->
+									<StackLayout
+										Orientation="Horizontal"
+										Spacing="14">
+                                        <Label
+											FontSize="24"
+											VerticalOptions="Center"
+											HorizontalOptions="Center"
+											Text="{ x:Static local:GrialIconsFont.Mail }"
+											FontFamily="{ StaticResource IconsFontFamily }"
+											TextColor="{ DynamicResource BaseTextColor }" />
+
+                                        <Entry
+											Placeholder="Id"
+											VerticalOptions="Center"
+											HorizontalOptions="FillAndExpand"
+											x:Name="TaskIdEntryOnUpdate"/>
+                                        
+                                    </StackLayout>
+
+                                    <!-- Name -->
+                                    <StackLayout
+										Orientation="Horizontal"
+										Spacing="14">
+                                        <Label
+											FontSize="24"
+											VerticalOptions="Center"
+											HorizontalOptions="Center"
+											Text="{ x:Static local:GrialIconsFont.Mail }"
+											FontFamily="{ StaticResource IconsFontFamily }"
+											TextColor="{ DynamicResource BaseTextColor }" />
+
+                                        <Entry
+											Placeholder="Name"
+											VerticalOptions="Center"
+											HorizontalOptions="FillAndExpand"
+											x:Name="TaskNameEntryOnUpdate"/>
+                                        
+                                    </StackLayout>
+
+                                    <!-- Date -->
+                                    <StackLayout
+										Orientation="Horizontal"
+										Spacing="14">
+                                        <Label
+											FontSize="24"
+											VerticalOptions="Center"
+											HorizontalOptions="Center"
+											Text="{ x:Static local:GrialIconsFont.Lock }"
+											FontFamily="{ StaticResource IconsFontFamily }"
+											TextColor="{ DynamicResource BaseTextColor }" />
+
+                                        <DatePicker HorizontalOptions="FillAndExpand" x:Name="TaskDatePickerOnUpdate">
+
+										</DatePicker>
+
+                                    </StackLayout>
+
+
+									<StackLayout
+										Spacing="14">
+                                        <Label
+											x:Name="UpdateTaskMessageLabel"
+											Text=""
+											FontSize="18"
+											HorizontalOptions="Center"
+											HorizontalTextAlignment="Center"
+										/>
+                                        
+                                    </StackLayout> 
+
+                                </StackLayout>
+
+								
+
+                                <StackLayout
+									Grid.Row="1"
+									Spacing="15"
+									VerticalOptions="End"
+									Margin="0,30,0,0">
+                                    <!-- Primary Button -->
+                                    <Button
+										Clicked="OnUpdateTaskBtnClicked"
+										HeightRequest="44"
+										VerticalOptions="Center"
+										Text="Confirm"
+										Style="{ StaticResource PrimaryActionButtonStyle }" />
+
+									 <!-- Line -->
+                                    <BoxView
+										VerticalOptions="Center"
+										HorizontalOptions="Fill"
+										Style="{ StaticResource Horizontal1ptLineStyle }" />
+
+                                </StackLayout>
+
+                            </Grid>
+                        </ScrollView>
+                        
+                    </grial:TabItem>
+
+
+
+
+
 
 					<!-- Get tasks TAB -->
                     <grial:TabItem
