--- a/Grial/Eleos3/Views/Forms/TabbedTaskManagementPage.xaml
+++ b/Grial/Eleos3/Views/Forms/TabbedTaskManagementPage.xaml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:Eleos3" xmlns:grial="clr-namespace:UXDivers.Grial;assembly=UXDivers.Grial" xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms" xmlns:fftransformations="clr-namespace:FFImageLoading.Transformations;assembly=FFImageLoading.Transformations"
-	x:Class="Eleos3.TabbedLoginPage"
+	x:Class="Eleos3.TabbedTaskManagementPage"
 	NavigationPage.HasNavigationBar="False"
 	Style="{ StaticResource MainMenuOrModalBackgroundStyle }">
     <ContentPage.Resources>
@@ -61,25 +61,26 @@
 					VerticalOptions="End"
 					HorizontalOptions="Start" />
                     
+                
             </Grid>
 
             <Grid
 				Grid.Row="1"
 				BackgroundColor="{ DynamicResource MainWrapperBackgroundColor }"
 				grial:Effects.ApplyIOSSafeAreaAsPadding="Bottom">
-                <!-- TAB -->
+                
+				<!-- ADD TASK TAB -->
                 <grial:TabControl
 					Style="{ StaticResource SimpleTabStyle }"
 					TabStripPlacement="Top"
 					TabStripBackgroundColor="{ DynamicResource BasePageColor}"
 					TabContentBackgroundColor="{ DynamicResource MainWrapperBackgroundColor }"
 					SelectedTabChanging="OnTabChangingEvent">
-					
-                    <!-- LOGIN TAB -->
-                    <grial:TabItem
+
+					<!-- ADD TASK -->
+					<grial:TabItem
 						IconText="{ x:Static local:GrialIconsFont.Camera }"
-						Text="Login"
-						>
+						Text="Add Task">   
                         <ScrollView>
                             <Grid
 								Padding="20"
@@ -91,12 +92,11 @@
 										Height="Auto" />
                                 </Grid.RowDefinitions>
 
-                               <StackLayout
+                                <StackLayout
 									Grid.Row="0"
 									VerticalOptions="Center"
 									Spacing="20">
-                                   
-                                    <!-- Email -->
+                                    <!-- Name -->
                                     <StackLayout
 										Orientation="Horizontal"
 										Spacing="14">
@@ -109,15 +109,14 @@
 											TextColor="{ DynamicResource BaseTextColor }" />
 
                                         <Entry
-											x:Name="EmailAddressEntryLogin"
-											Placeholder="Email"
+											Placeholder="Name"
 											VerticalOptions="Center"
 											HorizontalOptions="FillAndExpand"
-											IsTextPredictionEnabled="False"
-											Keyboard="Plain"/>
+											x:Name="TaskNameEntry"/>
+                                        
                                     </StackLayout>
 
-                                    <!-- Password -->
+                                    <!-- Date -->
                                     <StackLayout
 										Orientation="Horizontal"
 										Spacing="14">
@@ -129,142 +128,40 @@
 											FontFamily="{ StaticResource IconsFontFamily }"
 											TextColor="{ DynamicResource BaseTextColor }" />
 
-                                        <Entry
-											IsPassword="true"
-											x:Name="PasswordEntryLogin"
-											Placeholder="Password"
-											VerticalOptions="Center"
-											HorizontalOptions="FillAndExpand" />
-                                        
+                                        <DatePicker HorizontalOptions="FillAndExpand" x:Name="TaskDatePicker">
+
+										</DatePicker>
+
                                     </StackLayout>
 
+
 									<StackLayout
-										Spacing="0">
+										Spacing="14">
                                         <Label
-											x:Name="MessageLabelLogin"
+											x:Name="AddTaskMessageLabel"
 											Text=""
 											FontSize="18"
 											HorizontalOptions="Center"
 											HorizontalTextAlignment="Center"
 										/>
                                         
-                                    </StackLayout>
+                                    </StackLayout> 
 
                                 </StackLayout>
+
+								
 
                                 <StackLayout
 									Grid.Row="1"
-									Spacing="14"
+									Spacing="15"
 									VerticalOptions="End"
-									Margin="0,0,0,0">
+									Margin="0,30,0,0">
                                     <!-- Primary Button -->
                                     <Button
-										Clicked="OnLoginBtnClicked"
+										Clicked="OnAddTaskBtnClicked"
 										HeightRequest="44"
 										VerticalOptions="Center"
-										Text="Login"
-										Style="{ StaticResource PrimaryActionButtonStyle }" />
-
-									 <!-- Line -->
-                                    <BoxView
-										VerticalOptions="Center"
-										HorizontalOptions="Fill"
-										Style="{ StaticResource Horizontal1ptLineStyle }" />
-
-                                </StackLayout>
-
-                            </Grid>
-                        </ScrollView>
-                    </grial:TabItem>
-                    
-                    <!-- SIGNUP TAB -->
-                    <grial:TabItem
-						IconText="{ x:Static local:GrialIconsFont.Camera }"
-						Text="Sign up">   
-                        <ScrollView>
-                            <Grid
-								Padding="20"
-								Style="{ StaticResource ResponsiveLandscapeMarginStyle }">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition
-										Height="*" />
-                                    <RowDefinition
-										Height="Auto" />
-                                </Grid.RowDefinitions>
-
-                                <StackLayout
-									Grid.Row="0"
-									VerticalOptions="Center"
-									Spacing="20">
-                                   
-
-                                    <!-- Email -->
-                                    <StackLayout
-										Orientation="Horizontal"
-										Spacing="14">
-                                        <Label
-											FontSize="24"
-											VerticalOptions="Center"
-											HorizontalOptions="Center"
-											Text="{ x:Static local:GrialIconsFont.Mail }"
-											FontFamily="{ StaticResource IconsFontFamily }"
-											TextColor="{ DynamicResource BaseTextColor }" />
-
-                                        <Entry
-											IsTextPredictionEnabled="False"
-											Keyboard="Plain"
-											x:Name="EmailAddressEntrySignup"
-											Placeholder="Email"
-											VerticalOptions="Center"
-											HorizontalOptions="FillAndExpand" />
-                                    </StackLayout>
-
-                                    <!-- Password -->
-                                    <StackLayout
-										Orientation="Horizontal"
-										Spacing="14">
-                                        <Label
-											FontSize="24"
-											VerticalOptions="Center"
-											HorizontalOptions="Center"
-											Text="{ x:Static local:GrialIconsFont.Lock }"
-											FontFamily="{ StaticResource IconsFontFamily }"
-											TextColor="{ DynamicResource BaseTextColor }" />
-
-                                        <Entry
-											IsPassword="true"
-											x:Name="PasswordEntrySignup"
-											Placeholder="Password"
-											VerticalOptions="Center"
-											HorizontalOptions="FillAndExpand" />
-                                        
-                                    </StackLayout>
-
-									<StackLayout
-										Spacing="0">
-                                        <Label
-											x:Name="MessageLabelSignup"
-											Text=""
-											FontSize="18"
-											HorizontalOptions="Center"
-											HorizontalTextAlignment="Center"
-										/>
-                                        
-                                    </StackLayout>
-
-                                </StackLayout>
-
-                                <StackLayout
-									Grid.Row="1"
-									Spacing="14"
-									VerticalOptions="End"
-									Margin="0,0,0,0">
-                                    <!-- Primary Button -->
-                                    <Button
-										Clicked="OnSignupBtnClicked"
-										HeightRequest="44"
-										VerticalOptions="Center"
-										Text="Sign Up"
+										Text="Confirm"
 										Style="{ StaticResource PrimaryActionButtonStyle }" />
 
 									 <!-- Line -->
@@ -280,43 +177,115 @@
                         
                     </grial:TabItem>
 
-					<!-- LOGOUT TAB -->
-                    <grial:TabItem
+
+
+
+					<!-- UPDATE TASK-->
+					<grial:TabItem
 						IconText="{ x:Static local:GrialIconsFont.Camera }"
-						Text="Logout">
+						Text="Update Task">   
                         <ScrollView>
                             <Grid
 								Padding="20"
-								Style="{ StaticResource ResponsiveLandscapeMarginStyle }"
-								RowSpacing="10"
-								VerticalOptions="End">
-                                
-								<Grid.RowDefinitions>
+								Style="{ StaticResource ResponsiveLandscapeMarginStyle }">
+                                <Grid.RowDefinitions>
                                     <RowDefinition
 										Height="*" />
-                                    
+                                    <RowDefinition
+										Height="Auto" />
                                 </Grid.RowDefinitions>
 
-								<StackLayout
+                                <StackLayout
 									Grid.Row="0"
-									Spacing="14"
-									VerticalOptions="End"
-									Margin="0,0,0,0">
+									VerticalOptions="Center"
+									Spacing="20">
 
-									 <Label
-											x:Name="LogoutMessageLabel"
+									<!-- Id -->
+									<StackLayout
+										Orientation="Horizontal"
+										Spacing="14">
+                                        <Label
+											FontSize="24"
+											VerticalOptions="Center"
+											HorizontalOptions="Center"
+											Text="{ x:Static local:GrialIconsFont.Mail }"
+											FontFamily="{ StaticResource IconsFontFamily }"
+											TextColor="{ DynamicResource BaseTextColor }" />
+
+                                        <Entry
+											Placeholder="Id"
+											VerticalOptions="Center"
+											HorizontalOptions="FillAndExpand"
+											x:Name="TaskIdEntryOnUpdate"/>
+                                        
+                                    </StackLayout>
+
+                                    <!-- Name -->
+                                    <StackLayout
+										Orientation="Horizontal"
+										Spacing="14">
+                                        <Label
+											FontSize="24"
+											VerticalOptions="Center"
+											HorizontalOptions="Center"
+											Text="{ x:Static local:GrialIconsFont.Mail }"
+											FontFamily="{ StaticResource IconsFontFamily }"
+											TextColor="{ DynamicResource BaseTextColor }" />
+
+                                        <Entry
+											Placeholder="Name"
+											VerticalOptions="Center"
+											HorizontalOptions="FillAndExpand"
+											x:Name="TaskNameEntryOnUpdate"/>
+                                        
+                                    </StackLayout>
+
+                                    <!-- Date -->
+                                    <StackLayout
+										Orientation="Horizontal"
+										Spacing="14">
+                                        <Label
+											FontSize="24"
+											VerticalOptions="Center"
+											HorizontalOptions="Center"
+											Text="{ x:Static local:GrialIconsFont.Lock }"
+											FontFamily="{ StaticResource IconsFontFamily }"
+											TextColor="{ DynamicResource BaseTextColor }" />
+
+                                        <DatePicker HorizontalOptions="FillAndExpand" x:Name="TaskDatePickerOnUpdate">
+
+										</DatePicker>
+
+                                    </StackLayout>
+
+
+									<StackLayout
+										Spacing="14">
+                                        <Label
+											x:Name="UpdateTaskMessageLabel"
 											Text=""
 											FontSize="18"
 											HorizontalOptions="Center"
 											HorizontalTextAlignment="Center"
 										/>
+                                        
+                                    </StackLayout> 
 
+                                </StackLayout>
+
+								
+
+                                <StackLayout
+									Grid.Row="1"
+									Spacing="15"
+									VerticalOptions="End"
+									Margin="0,30,0,0">
                                     <!-- Primary Button -->
                                     <Button
-										Clicked="OnLogoutBtnClicked"
+										Clicked="OnUpdateTaskBtnClicked"
 										HeightRequest="44"
 										VerticalOptions="Center"
-										Text="Logout"
+										Text="Confirm"
 										Style="{ StaticResource PrimaryActionButtonStyle }" />
 
 									 <!-- Line -->
@@ -329,9 +298,159 @@
 
                             </Grid>
                         </ScrollView>
+                        
                     </grial:TabItem>
 
-                </grial:TabControl>
+					<!-- DELETE TASK -->
+					<grial:TabItem
+						IconText="{ x:Static local:GrialIconsFont.Camera }"
+						Text="Delete Task">   
+                        <ScrollView>
+                            <Grid
+								Padding="20"
+								Style="{ StaticResource ResponsiveLandscapeMarginStyle }">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition
+										Height="*" />
+                                    <RowDefinition
+										Height="Auto" />
+                                </Grid.RowDefinitions>
+
+                                <StackLayout
+									Grid.Row="0"
+									VerticalOptions="Center"
+									Spacing="20">
+                                    <!-- Id -->
+                                    <StackLayout
+										Orientation="Horizontal"
+										Spacing="14">
+                                        <Label
+											FontSize="24"
+											VerticalOptions="Center"
+											HorizontalOptions="Center"
+											Text="{ x:Static local:GrialIconsFont.Mail }"
+											FontFamily="{ StaticResource IconsFontFamily }"
+											TextColor="{ DynamicResource BaseTextColor }" />
+
+                                        <Entry
+											Placeholder="Id"
+											VerticalOptions="Center"
+											HorizontalOptions="FillAndExpand"
+											x:Name="TaskIdEntryOnDelete"/>
+                                        
+                                    </StackLayout>
+
+									<StackLayout
+										Spacing="14">
+                                        <Label
+											x:Name="DeleteTaskMessageLabel"
+											Text=""
+											FontSize="18"
+											HorizontalOptions="Center"
+											HorizontalTextAlignment="Center"
+										/>
+                                        
+                                    </StackLayout> 
+
+                                </StackLayout>
+
+                                <StackLayout
+									Grid.Row="1"
+									Spacing="15"
+									VerticalOptions="End"
+									Margin="0,30,0,0">
+                                    <!-- Primary Button -->
+                                    <Button
+										Clicked="OnDeleteTaskBtnClicked"
+										HeightRequest="44"
+										VerticalOptions="Center"
+										Text="Confirm"
+										Style="{ StaticResource PrimaryActionButtonStyle }" />
+
+									 <!-- Line -->
+                                    <BoxView
+										VerticalOptions="Center"
+										HorizontalOptions="Fill"
+										Style="{ StaticResource Horizontal1ptLineStyle }" />
+
+                                </StackLayout>
+
+                            </Grid>
+                        </ScrollView>
+                        
+                    </grial:TabItem>
+
+					<!-- GET TASKS TAB -->
+                    <grial:TabItem
+						IconText="{ x:Static local:GrialIconsFont.Camera }"
+						Text="Get tasks"
+						Tapped="OnTappedTabGetTasksEvent"
+						>
+
+						<ScrollView>
+
+							<ListView
+								CachingStrategy="RecycleElement"
+								SeparatorVisibility="Default"
+								ItemsSource="{ Binding TasksCollection }"
+								HasUnevenRows="false"
+								RowHeight="140">
+								<ListView.ItemTemplate>
+									<DataTemplate>
+										<ViewCell>
+											<Grid
+												RowSpacing="5"
+												ColumnSpacing="10"
+												Padding="14"
+												BackgroundColor="{ DynamicResource BasePageColor }">
+        
+												<Grid.ColumnDefinitions>
+													<ColumnDefinition
+														Width="100" />
+												</Grid.ColumnDefinitions>
+
+												<Grid.RowDefinitions>
+													<RowDefinition
+														Height="24" />
+													<RowDefinition
+														Height="16" />
+													<RowDefinition
+														Height="*" />
+												</Grid.RowDefinitions>
+
+												<Label
+													Grid.Row="0"
+													Grid.Column="0"
+													Text="{ Binding id }"
+													Style="{ StaticResource LabelBoldStyle }"
+													FontSize="18"
+													LineBreakMode="TailTruncation"
+													TextColor="{ DynamicResource AccentColor }" />
+            
+												<Label
+													Grid.Row="1"
+													Grid.Column="0"
+													Text="{ Binding name }"
+													Opacity=".7"
+													FontSize="12" />
+        
+												<Label
+													Grid.Row="2"
+													Grid.Column="0"
+													Text="{ Binding date }"
+													FontSize="{ grial:OnOrientationDouble 
+														PortraitPhone=12,
+														LandscapePhone=12,
+														PortraitTablet=14,
+														LandscapeTablet=14 }" />
+											</Grid>
+										</ViewCell>
+									</DataTemplate>
+								</ListView.ItemTemplate>
+							</ListView>
+						 </ScrollView>
+					</grial:TabItem>
+				</grial:TabControl>
             </Grid>
             
             <!-- CLOSE ICON -->
